--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Explore how Vue works under the hood.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Addy Zhou",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1",
+    "core-js": "3.26.1",
     "eslint": "^8.29.0",
     "jest": "^29.3.1"
   }
