--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^27.3.1",
     "core-js": "3.26.1",
     "eslint": "^8.29.0",
-    "babel-jest": "^27.3.1",
     "jest": "^27.3.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
