--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "core-js": "3.26.1",
     "eslint": "^8.29.0",
     "husky": "^8.0.3",
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "lint-staged": {
+    "*": "prettier --write --ignore-unknown",
+    "*.js": "eslint"
   }
 }
